--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,7 +1,9 @@
 <h1>STUPID QUESTION</h1>
 <h2><%= @answer %></h2>
 <p>-your question</p>
+<div class="response">
 <h2><%= @question %></h2>
 <p>- Your coach</p>
+</div>
 
-<%= link_to "ask", ask_path, class: ""  %>
+<%= link_to "ask a new question", ask_path, class: ""  %>
