--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -5,5 +5,6 @@
 <h2><%= @question %></h2>
 <p>- Your coach</p>
 </div>
+<! -- et être fermés par la balise -->
 
 <%= link_to "ask a new question", ask_path, class: ""  %>
